@@ -184,7 +184,7 @@ headers</description>
       <li>
         Set a test cookie if and only if the client didn't send us a cookie
         <example>
-          Header set Set-Cookie testcookie !$req{Cookie}
+          Header set Set-Cookie testcookie "expr=-z %{req:Cookie}"
         </example>
       </li>
     </ol>
@@ -273,15 +273,15 @@ headers</description>
     <dl>
     <dt><code>early</code></dt>
     <dd>Specifies <a href="#early">early processing</a>.</dd>
-    <dt><code>env=[!]varname</code></dt>
+    <dt><code>env=[!]<var>varname</var></code></dt>
     <dd>The directive is applied if and only if the <a href="../env.html"
         >environment variable</a> <code>varname</code> exists.
         A <code>!</code> in front of <code>varname</code> reverses the test,
         so the directive applies only if <code>varname</code> is unset.</dd>
-    <dt><code>expr</code></dt>
-    <dd>An string that matches neither of the above is parsed as an
-        expression.  Details of expression syntax and evaluation are
-        currently best documented on the <module>mod_filter</module> page.</dd>
+    <dt><code>expr=<var>expression</var></code></dt>
+    <dd>The directive is applied if and only if <var>expression</var>
+        evaluates to true. Details of expression syntax and evaluation are
+        documented in the <a href="../expr.html">ap_expr</a> documentation.</dd>
     </dl>
 
     <p>Except in <a href="#early">early</a> mode, the
@@ -447,15 +447,15 @@ headers</description>
     <dl>
     <dt><code>early</code></dt>
     <dd>Specifies <a href="#early">early processing</a>.</dd>
-    <dt><code>env=[!]varname</code></dt>
+    <dt><code>env=[!]<var>varname</var></code></dt>
     <dd>The directive is applied if and only if the <a href="../env.html"
         >environment variable</a> <code>varname</code> exists.
         A <code>!</code> in front of <code>varname</code> reverses the test,
         so the directive applies only if <code>varname</code> is unset.</dd>
-    <dt><code>expr</code></dt>
-    <dd>An string that matches neither of the above is parsed as an
-        expression.  Details of expression syntax and evaluation are
-        currently best documented on the <module>mod_filter</module> page.</dd>
+    <dt><code>expr=<var>expression</var></code></dt>
+    <dd>The directive is applied if and only if <var>expression</var>
+        evaluates to true. Details of expression syntax and evaluation are
+        documented in the <a href="../expr.html">ap_expr</a> documentation.</dd>
     </dl>
 
     <p>Except in <a href="#early">early</a> mode, the
