@@ -46,7 +46,7 @@
         Log message if request to /foo/* is processed in a sub-request:
         <example>
             &lt;Location /foo/&gt;<br/>
-            &nbsp;&nbsp;LogMessage "subrequest to /foo/" hook=type_checker if=%{IS_SUBREQ}<br/>
+            &nbsp;&nbsp;LogMessage "subrequest to /foo/" hook=type_checker expr=%{IS_SUBREQ}<br/>
             &lt;/Location&gt;<br/>
         </example>
 
@@ -59,9 +59,9 @@
         Log message if an IPv6 client causes a request timeout:
         <example>
             LogMessage "IPv6 timeout from %{REMOTE_ADDR}"
-              "if=-T %{IPV6} &amp;&amp; %{REQUEST_STATUS} = 408"
+              "expr=-T %{IPV6} &amp;&amp; %{REQUEST_STATUS} = 408"
         </example>
-        Note the placing of the double quotes for the <code>if=</code> argument.
+        Note the placing of the double quotes for the <code>expr=</code> argument.
       </li>
 
       <li>
@@ -85,7 +85,7 @@
 <description>Log userdefined message to error log
 </description>
 <syntax>LogMessage <var>message</var>
-[hook=<var>hook</var>] [if=<var>expression</var>]
+[hook=<var>hook</var>] [expr=<var>expression</var>]
 </syntax>
 <default>Unset</default>
 <contextlist><context>directory</context>
